# mattress

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: build-docs.yml  pypi-publish.yml  pypi-test.yml  run-tests.yml
_modules/: index.html  mattress.html
_modules/mattress/: InitializedMatrix.html  initialize.html
_sources/api/: mattress.rst.txt
_static/: documentation_options.js
api/: mattress.html  modules.html
lib/: CMakeLists.txt
lib/src/: common.cpp  compressed_sparse_matrix.cpp  delayed_binary_isometric_operation.cpp  delayed_bind.cpp  delayed_subset.cpp  delayed_transpose.cpp  delayed_unary_isometric_operation_simple.cpp  delayed_unary_isometric_operation_with_args.cpp  dense_matrix.cpp  fragmented_sparse_matrix.cpp  init.cpp  unknown_matrix.cpp  utils.h
src/mattress/: InitializedMatrix.py  _InitializedMatrix.py  __init__.py  _initialize.py  initialize.py
src/mattress/include/: mattress.h
tests/: test_delayed_subset.py  test_miscellaneous.py  test_unknown_matrix.py
